Changelog for collective.editskinswitcher
=========================================

0.8 (unreleased)
----------------

- Allow specifying the admin_header; defaults to HTTP_PLONEADMIN.
  [maurits]

- Added z3c.autoinclude.plugin entry point for plone, to avoid having
  collective.editskinswitcher in the zcml option of your zope
  instance; only effective in Plone 3.3 or higher.  In earlier
  versions you still need to do this manually.
  [maurits]


0.7 (2008-10-04)
----------------

- Added switching option based on a request header flag set by the
  proxy server (eg. Apache)
  [Ed Crewe, ILRT - University of Bristol]

0.6 (2008-08-27)
----------------

- New preview feature so that the default skin can be seen via the
  edit skin interface to preserve some level of WYSIWYG for editing.
  (Based on part of an unreleased plone 2 product by Dominic Hiles.)
  Preview feature is available as a viewlet for use via a view or a
  viewletManager, but it is turned off by default.  Examples of how to
  enable it are included in the tests, where it is enabled and tested.
  [Ed Crewe, ILRT - University of Bristol]

- Extra URL skin switching options of SSL or specific URLs
  [Ed Crewe, ILRT - University of Bristol]

- Setting eol style in subversion correctly. [reinout]


0.5 (2008-03-07)
----------------

- Bug fix: when called on the zope root (can happen in some cases)
  portal_properties was not found, which was not caught correctly.
  [maurits]


0.4 (2008-02-12)
----------------

- Bug fix: if object has no changeSkin, try its context.  Happens at
  least on the sharing tab when searching for users, as object is a
  KSS view then.
  [maurits]


0.3 (2008-01-30)
----------------

- Instead of an Access Rule, use a pre-traversal hook.  Idea: David
  Convent.  Thanks!  Is a lot cleaner.
  [maurits]

- Avoid confusion in README.txt: talk about Editor Skin and Visitor
  Skin instead of Plone Default and the default skin.
  [maurits]
