@@ -20,6 +20,10 @@ tests. It lets us see all error messages in the error_log.
     >>> browser.handleErrors = False
     >>> self.portal.error_log._ignored_exceptions = ()
 
+And we make sure we are logged out:
+
+    >>> browser.open(portal_url + '/logout')
+
 Skin switching is done when the switch_skin_action is 'based on SSL'
 so lets switch on skin changing due to SSL:
 
